fix: word wrapping and hyphens

--- a/style/style.css
+++ b/style/style.css
@@ -108,10 +108,12 @@ section h3{
         font-weight: 400;
         line-height: 1.75rem;
         color: var(--white);
+        overflow-wrap: break-word;
+        hyphens: auto;
     }
     &:nth-child(2) {
-        width: 90%;
-        padding-right: 5%;
+        width: 85%;
+        padding-right: 15%;
     }
 }
 
